<resources>
    <string name="app_name">Material Files</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="default_">Default</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <string name="empty_placeholder">(Empty)</string>
    <string name="error">Error</string>
    <string name="hide">Hide</string>
    <string name="install">Install</string>
    <string name="keep_editing">Keep editing</string>
    <string name="loading">Loading…</string>
    <string name="maybe_later">Maybe later</string>
    <string name="menu">Menu</string>
    <string name="merge">Merge</string>
    <string name="none">None</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="paste">Paste</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="replace">Replace</string>
    <string name="reset">Reset</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="select_between">Select between</string>
    <string name="share">Share</string>
    <string name="show">Show</string>
    <string name="skip">Skip</string>
    <string name="stop">Stop</string>
    <string name="system_default">System default</string>
    <string name="unknown">Unknown</string>
    <string name="view">View</string>
    <string name="activity_not_found">No application found to handle this action</string>
    <string name="copied_to_clipboard_format" translatable="false">@string/preference_copied</string>
    <string name="open_settings">Open settings</string>
    <string name="shortcut_created">Shortcut created</string>
    <plurals name="size_in_bytes_format">
        <item quantity="one">%1$,d byte</item>
        <item quantity="other">%1$,d bytes</item>
    </plurals>
    <string name="all_files_access_rationale_message">App needs access to manage all files. Please allow the access in the upcoming system setting.</string>
    <string name="storage_permission_rationale_message">App needs permission to access files. Please click "ALLOW" in the upcoming system dialog.</string>
    <string name="storage_permission_permanently_denied_message">App needs permission to access files. Please grant the "Storage" permission in system settings.</string>
    <string name="notification_permission_rationale_message">App needs permission to post notifications about file operations. Please click "Allow" in the upcoming system dialog.</string>
    <string name="notification_permission_permanently_denied_message">App needs permission to post notifications about file operations. Please grant the "Notification" permission in system settings.</string>
    <string name="notification_channel_background_activity_start_name">Actions while background</string>
    <string name="notification_channel_background_activity_start_description">Take actions while app is in the background</string>
    <string name="notification_channel_file_job_name">File operations</string>
    <string name="notification_channel_file_job_description">Display and control file operations</string>
    <string name="notification_channel_ftp_server_name">FTP server</string>
    <string name="notification_channel_ftp_server_description">Display and control the FTP server</string>
    <string name="file_action_archive_password_title">Password required</string>
    <string name="file_action_archive_password_message_format">"%1$s" is password-protected.</string>
    <string name="file_action_archive_password_error_empty">Password cannot be empty</string>
    <string name="file_action_veracrypt_password_title">VeraCrypt password</string>
    <string name="file_action_veracrypt_password_message_format">"%1$s" is a VeraCrypt container.</string>
    <string name="file_action_veracrypt_password_checking">Checking password…</string>
    <string name="file_action_veracrypt_password_error_incorrect">Incorrect password</string>
    <string name="veracrypt_lock">Lock</string>
    <string name="veracrypt_locked_format">"%1$s" locked</string>
    <plurals name="file_job_archive_scan_notification_title_format">
        <item quantity="one">Preparing to compress %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to compress %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_archive_notification_title_one_format">Compressing "%1$s" into "%2$s"</string>
    <plurals name="file_job_archive_notification_title_multiple_format">
        <item quantity="one">Compressing %1$,d file into "%2$s"</item>
        <item quantity="other">Compressing %1$,d files into "%2$s"</item>
    </plurals>
    <plurals name="file_job_copy_scan_notification_title_format">
        <item quantity="one">Preparing to copy %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to copy %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_copy_notification_title_one_format">Copying "%1$s" to "%2$s"</string>
    <plurals name="file_job_copy_notification_title_multiple_format">
        <item quantity="one">Copying %1$,d file to "%2$s"</item>
        <item quantity="other">Copying %1$,d files to "%2$s"</item>
    </plurals>
    <string name="veracrypt_viewer_title">VeraCrypt container opener</string>
    <plurals name="file_job_extract_scan_notification_title_format">
        <item quantity="one">Preparing to extract %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to extract %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_extract_notification_title_one_format">Extracting "%1$s" to "%2$s"</string>
    <plurals name="file_job_extract_notification_title_multiple_format">
        <item quantity="one">Extracting %1$,d file to "%2$s"</item>
        <item quantity="other">Extracting %1$,d files to "%2$s"</item>
    </plurals>
    <plurals name="file_job_move_scan_notification_title_format">
        <item quantity="one">Preparing to move %1$,d file (%2$s)</item>
        <item quantity="other">Preparing to move %1$,d files (%2$s)</item>
    </plurals>
    <string name="file_job_move_notification_title_one_format">Moving "%1$s" to "%2$s"</string>
    <plurals name="file_job_move_notification_title_multiple_format">
        <item quantity="one">Moving %1$,d file to "%2$s"</item>
        <item quantity="other">Moving %1$,d files to "%2$s"</item>
    </plurals>
    <string name="file_job_transfer_size_notification_text_one_format">%1$s / %2$s</string>
    <string name="file_job_transfer_size_notification_text_multiple_format">%1$,d / %2$,d</string>
    <plurals name="file_job_delete_scan_notification_title_format">
        <item quantity="one">Preparing to delete %1$,d file</item>
        <item quantity="other">Preparing to delete %1$,d files</item>
    </plurals>
    <string name="file_job_delete_notification_title_one_format">Deleting "%1$s"</string>
    <plurals name="file_job_delete_notification_title_multiple_format">
        <item quantity="one">Deleting %1$,d file</item>
        <item quantity="other">Deleting %1$,d files</item>
    </plurals>
    <plurals name="file_job_set_owner_scan_notification_title_format">
        <item quantity="one">Preparing to change owner for %1$,d file</item>
        <item quantity="other">Preparing to change owner for %1$,d files</item>
    </plurals>
    <string name="file_job_set_owner_notification_title_one_format">Changing owner for "%1$s"</string>
    <plurals name="file_job_set_owner_notification_title_multiple_format">
        <item quantity="one">Changing owner for %1$,d file</item>
        <item quantity="other">Changing owner for %1$,d files</item>
    </plurals>
    <string name="file_list_action_view_sort">View and sort</string>
    <string name="top_bar_scroll_mode_title">Top section auto-hide</string>
    <string name="top_bar_scroll_mode_always">Always show top section</string>
    <string name="top_bar_scroll_mode_scroll_up">Auto-hide on scroll (Show on scroll up)</string>
    <string name="top_bar_scroll_mode_arrow">Auto-hide on scroll (Show via arrow button)</string>
    <string name="file_list_action_quick_preview">Quick Peek preview</string>
    <string name="file_list_action_view_list">List</string>
    <string name="file_list_action_view_grid">Grid</string>
    <string name="file_list_action_sort_by_name">Name</string>
    <string name="file_list_action_sort_by_type">Type</string>
    <string name="file_list_action_sort_by_size">Size</string>
    <string name="file_list_action_sort_by_last_modified">Last modified</string>
    <string name="file_list_action_sort_by_duration">Duration</string>
    <string name="file_list_action_sort_order_ascending">Ascending</string>
    <string name="file_list_action_sort_directories_first">Folders first</string>
    <string name="file_list_action_view_sort_path_specific">Only for this folder</string>
    <string name="file_list_action_new_task">New window</string>
    <string name="file_list_action_navigate_up">Go up</string>
    <string name="file_list_action_navigate_to">Go to</string>
    <string name="file_list_action_show_hidden_files">Show hidden files</string>
    <string name="file_list_action_copy_path">Copy path</string>
    <string name="file_list_action_open_in_terminal">Open in terminal</string>
    <string name="file_list_action_add_bookmark">Add bookmark</string>
    <string name="file_list_action_create_shortcut">Create shortcut</string>
    <string name="file_list_select_action_extract" translatable="false">@string/file_item_action_extract</string>
    <string name="file_list_action_create_file">File</string>
    <string name="file_list_action_create_directory">Folder</string>
    <string name="file_item_action_archive">Compress</string>
    <string name="file_list_action_show_creation_date">Show creation date</string>
    <string name="file_tag_management_title">Manage Tags</string>
    <string name="file_tag_filter_title">Filter by Tags</string>
    <string name="file_tag_filter_mode_all">Match all</string>
    <string name="file_tag_filter_mode_any">Match any</string>
    <string name="settings_file_list_hide_info_in_grid_title">Hide file info in grid view</string>
    <string name="file_list_action_use_square_thumbnails">Use square thumbnails</string>
    <string name="file_list_action_use_square_thumbnails_in_grid">Use square thumbnails</string>
    <string name="file_rating_title">Set Rating</string>
    <string name="file_rating_subtitle">1 is best, 9 is worst (0 = no rating)</string>
    <string name="file_rating_best">Best (1)</string>
    <string name="file_rating_worst">Worst (9)</string>
    <string name="file_list_action_set_rating">Set Rating</string>
    <string name="file_list_action_sort_by_rating">Rating</string>
    <string name="file_list_action_item_scale">Item scale</string>
    <string name="file_list_action_use_portrait_mode_in_grid">Portrait orientation (9:16)</string>
    <string name="file_list_action_regenerate_thumbnails">Regenerate thumbnails</string>
    <string name="folder_thumbnail_dialog_title">Folder Thumbnail</string>
    <string name="folder_thumbnail_preview">Preview</string>
    <string name="choose_image">Choose image</string>
    <string name="remove_thumbnail">Remove thumbnail</string>
    <string name="settings_grid_overlay_info_title">Overlay info on grid thumbnail</string>
</resources>