<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="me.zhanghai.android.files.ui.FixQueryChangeSearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_quick_preview"
        android:checkable="true"
        android:icon="@drawable/ic_eye_white_24dp"
        android:orderInCategory="110"
        android:title="@string/file_list_action_quick_preview"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter_tags"
        android:icon="@drawable/tags_icon_control_normal_24dp"
        android:orderInCategory="150"
        android:title="@string/file_tag_filter_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_view_sort"
        android:icon="@drawable/sort_icon_control_normal_24dp"
        android:orderInCategory="200"
        android:title="@string/file_list_action_view_sort"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/group_view"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_view_list"
                    android:icon="@drawable/menu_icon_control_normal_24dp"
                    android:title="@string/file_list_action_view_list"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_view_grid"
                    android:icon="@drawable/ic_image_white_24dp"
                    android:title="@string/file_list_action_view_grid"
                    app:iconTint="@android:color/white" />
            </group>
            <group
                android:id="@+id/group_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_name"
                    android:icon="@drawable/text_file_icon_white_24dp"
                    android:title="@string/file_list_action_sort_by_name"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_sort_by_type"
                    android:icon="@drawable/file_icon_white_24dp"
                    android:title="@string/file_list_action_sort_by_type"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_sort_by_size"
                    android:icon="@drawable/sd_card_icon_white_24dp"
                    android:title="@string/file_list_action_sort_by_size"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_sort_by_last_modified"
                    android:icon="@drawable/tim_icon_white_24dp"
                    android:title="@string/file_list_action_sort_by_last_modified"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_sort_by_rating"
                    android:icon="@drawable/star_icon_control_normal_24dp"
                    android:title="@string/file_list_action_sort_by_rating"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_sort_by_duration"
                    android:icon="@drawable/video_icon_white_24dp"
                    android:title="@string/file_list_action_sort_by_duration"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_sort_order_ascending"
                    android:checkable="true"
                    android:icon="@drawable/arrow_end_icon_white_24dp"
                    android:title="@string/file_list_action_sort_order_ascending"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_sort_directories_first"
                    android:checkable="true"
                    android:icon="@drawable/directory_icon_white_24dp"
                    android:title="@string/file_list_action_sort_directories_first"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_show_date_type"
                    android:checkable="true"
                    android:icon="@drawable/alarm_icon_white_24dp"
                    android:title="@string/file_list_action_show_creation_date"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_hide_info_in_grid"
                    android:checkable="true"
                    android:icon="@drawable/information_icon_white_24dp"
                    android:title="@string/settings_file_list_hide_info_in_grid_title"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_grid_overlay_info"
                    android:checkable="true"
                    android:icon="@drawable/ic_image_white_24dp"
                    android:title="@string/settings_grid_overlay_info_title"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_use_square_thumbnails"
                    android:checkable="true"
                    android:icon="@drawable/badge_background_18dp"
                    android:title="@string/file_list_action_use_square_thumbnails"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_square_thumbnails_in_grid"
                    android:checkable="true"
                    android:icon="@drawable/file_item_grid_thumbnail_outline"
                    android:title="@string/file_list_action_use_square_thumbnails_in_grid"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_use_portrait_mode_in_grid"
                    android:checkable="true"
                    android:icon="@drawable/device_icon_white_24dp"
                    android:title="@string/file_list_action_use_portrait_mode_in_grid"
                    app:iconTint="@android:color/white" />
                <item
                    android:id="@+id/action_item_scale"
                    android:icon="@drawable/select_all_icon_control_normal_24dp"
                    android:title="@string/file_list_action_item_scale"
                    app:iconTint="@android:color/white" />
                <item
                    android:title="@string/top_bar_scroll_mode_title">
                    <menu>
                        <group android:checkableBehavior="single">
                            <item
                                android:id="@+id/topBarModeAlwaysItem"
                                android:title="@string/top_bar_scroll_mode_always" />
                            <item
                                android:id="@+id/topBarModeScrollUpItem"
                                android:title="@string/top_bar_scroll_mode_scroll_up" />
                            <item
                                android:id="@+id/topBarModeArrowItem"
                                android:title="@string/top_bar_scroll_mode_arrow" />
                        </group>
                    </menu>
                </item>
                <item
                    android:id="@+id/action_regenerate_thumbnails"
                    android:icon="@drawable/reset_icon_white_24dp"
                    android:title="@string/file_list_action_regenerate_thumbnails"
                    app:iconTint="@android:color/white" />
            </group>
            <item
                android:id="@+id/action_view_sort_path_specific"
                android:checkable="true"
                android:icon="@drawable/save_icon_control_normal_24dp"
                android:title="@string/file_list_action_view_sort_path_specific"
                app:iconTint="@android:color/white" />
        </menu>
    </item>

    <item
        android:id="@+id/action_tag_filter_any"
        android:title="@string/file_tag_filter_mode_any"
        android:checkable="true" />

    <item
        android:id="@+id/action_tag_filter_all"
        android:title="@string/file_tag_filter_mode_all"
        android:checkable="true" />

    <item
        android:id="@+id/action_create_directory"
        android:icon="@drawable/directory_icon_white_24dp"
        android:orderInCategory="90"
        android:title="@string/file_list_action_create_directory"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_file"
        android:icon="@drawable/file_icon_white_24dp"
        android:orderInCategory="95"
        android:title="@string/file_list_action_create_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_task"
        android:orderInCategory="100"
        android:title="@string/file_list_action_new_task"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_navigate_up"
        android:orderInCategory="100"
        android:title="@string/file_list_action_navigate_up"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_navigate_to"
        android:alphabeticShortcut="l"
        android:orderInCategory="100"
        android:title="@string/file_list_action_navigate_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:alphabeticShortcut="r"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_all"
        android:alphabeticShortcut="a"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_hidden_files"
        android:alphabeticShortcut="h"
        android:orderInCategory="100"
        android:title="@string/file_list_action_show_hidden_files"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_path"
        android:orderInCategory="100"
        android:title="@string/file_list_action_copy_path"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_in_terminal"
        android:orderInCategory="100"
        android:title="@string/file_list_action_open_in_terminal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_bookmark"
        android:orderInCategory="100"
        android:title="@string/file_list_action_add_bookmark"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_shortcut"
        android:orderInCategory="100"
        android:title="@string/file_list_action_create_shortcut"
        app:showAsAction="never" />
</menu>
